# qmkfmt

./: .clang-format  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/snapshots/: qmkfmt__tests__fmt.snap
testdata/: keymap.c  keymap_moonlander.c
testdata/after/dactyl/keymaps/default/: keymap.c
testdata/after/moonlander/keymaps/default/: keymap.c
testdata/before/dactyl/keymaps/default/: keymap.c
testdata/dactyl/keymaps/default/: keymap.c
testdata/layout_outside_keymap/keymaps/default/: keymap.c
testdata/moonlander/keymaps/default/: keymap.c
tests/: integration_test.rs
tests/snapshots/: integration_test__fmt.snap  integration_test__fmt_dactyl.snap  integration_test__fmt_dactyl_stdio.snap  integration_test__fmt_layout_outside_keymap.snap  integration_test__fmt_layout_outside_keymap_no_clang.snap  integration_test__fmt_moonlander.snap  integration_test__fmt_moonlander_no_clang.snap  integration_test__help.snap
