[package]
name = "qmkfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
prettytable = { version = "0.10.0", default-features = false }
streaming-iterator = "0.1.9"
tree-sitter = "0.24"
tree-sitter-c = "0.23.2"

[dev-dependencies]
insta = { version = "1.39" }
insta-cmd = "0.6"

