[package]
name = "qmkfmt"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Formatter for QMK keymaps"
homepage = "https://github.com/rcorre/qmkfmt"
repository = "https://github.com/rcorre/qmkfmt"
keywords = ["qmk", "format"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
streaming-iterator = "0.1.9"
tree-sitter = "0.24"
tree-sitter-c = "0.23.2"

[dev-dependencies]
insta = { version = "1.39" }
insta-cmd = "0.6"
pretty_assertions = "1.4.1"
tempfile = "3.14.0"

